--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "open-iconic": "^1.1.1",
     "react": "^16.3.1",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.3.1",
+    "react-feather": "^1.1.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
@@ -36,9 +36,11 @@
     "react-dom": "*",
     "react-dnd": "*",
     "react-dnd-html5-backend": "*",
-    "bootstrap": "*"
+    "bootstrap": "*",
+    "react-feather": "*"
   },
   "scripts": {
-    "dist": "webpack"
+    "dist": "webpack",
+    "watch": "webpack --watch"
   }
 }
